--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Welcome to My Website!</h1>
-    <p>This site is hosted for free using GitHub Pages.</p>
+    <p>Loading Soon.</p>
   </body>
 </html>
