--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My Website</title>
   </head>
   <body>
-    <h1>Welcome to My Website!</h1>
+    <h1>Welcome to Otomate!</h1>
     <p>Loading Soon.</p>
   </body>
 </html>
