--- a/index.html
+++ b/index.html
@@ -126,17 +126,10 @@
       <li><strong>Track insights</strong> – from patient engagement to reagent usage.</li>
     </ol>
   </section>
-
-  <section id="testimonials">
-    <h2>What Labs Say</h2>
-    <blockquote>“Within weeks, we automated 80% of patient queries and eliminated 3 hours of daily admin time.”<br><em>– Dr. R. Shah, PathLab Diagnostics</em></blockquote>
-    <blockquote>“Our reagent tracking and result notifications are now completely automated — it’s like having an extra team member!”<br><em>– K. Mehta, MedStar Labs</em></blockquote>
-  </section>
-
   <section id="contact">
     <h2>Contact Us</h2>
     <p>Ready to bring AI to your lab? We'd love to hear from you.</p>
-    <p><strong>Email:</strong> [Add your contact email here]</p>
+    <p><strong>Email:</strong> [email]</p>
     <p><strong>Location:</strong> Houston, TX — serving labs globally</p>
   </section>
 
