--- a/oto/index.html
+++ b/oto/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OtoFlo - Inventory Management System</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode.js/1.5.3/qrcode.min.js"></script>
     <style>
         :root {
             --color-primary: #1e40af;
@@ -67,3 +66,7 @@
             padding: 8px 16px;
             background-color: var(--color-error);
             color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-siz
