--- a/oto/index.html
+++ b/oto/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OtoFlo - Inventory Management System</title>
+    <title>OTO - Inventory Management</title>
     <style>
         :root {
             --color-primary: #1e40af;
