--- a/oto/index.html
+++ b/oto/index.html
@@ -1,72 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OTO - Inventory Management</title>
-    <style>
-        :root {
-            --color-primary: #1e40af;
-            --color-primary-hover: #1e3a8a;
-            --color-accent: #3b82f6;
-            --color-background: #f8fafc;
-            --color-surface: #ffffff;
-            --color-text: #1e293b;
-            --color-text-secondary: #64748b;
-            --color-border: #e2e8f0;
-            --color-success: #10b981;
-            --color-warning: #f59e0b;
-            --color-error: #ef4444;
-            --color-info: #0ea5e9;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html, body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background-color: var(--color-background);
-            color: var(--color-text);
-            height: 100%;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-        }
-
-        /* Navigation */
-        .navbar {
-            background-color: var(--color-surface);
-            border-bottom: 1px solid var(--color-border);
-            padding: 15px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .navbar-title {
-            font-size: 20px;
-            font-weight: 700;
-            color: var(--color-primary);
-            letter-spacing: 0.05em;
-        }
-
-        .user-info {
-            display: flex;
-            gap: 15px;
-            align-items: center;
-        }
-
-        .logout-btn {
-            padding: 8px 16px;
-            background-color: var(--color-error);
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-siz
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>OTO Inventory</title>
+<style>
+:root{--cp:#1e40af;--ch:#1e3a8a;--bg:#f8fafc;--sf:#fff;--tx:#1e293b;--ts:#64748b;--bd:#e2e8f0;--ok:#10b981;--w:#f59e0b;--e:#ef4444}
+*{margin:0;padding:0;box-sizing:border-box}
+body{font-family:system-ui,sans-serif;background:var(--bg);color:var(--tx);display:flex;flex-direction:column;height:100vh}
+.navbar{background:var(--sf);border-bottom:1px solid var(--bd);padding:15px 20px;display:flex;justify-content:space-between;align-items:center}
+.title{font-size:20px;font-weight:700;color:var(--cp)}
+.user{display:flex;gap:15px;align-items:center}
+.logout{padding:8px 16px;background:var(--e);color:#fff;border:none;border-radius:4px;cursor:pointer}
+.logout:hover{background:#dc2626}
+.container{display:flex;flex:1;overflow:hidden}
+.sidebar{width:250px;background:var(--sf);border-right:1px solid var(--bd);padding:20px;overflow-y:auto}
+.menu{list-style:none}
+.menu li{margin-bottom:10px}
+.menu button{width:100%;padding:12px 15px;background:transparent;border:1px solid var(--bd);border-radius:4px;cursor:pointer;font-size:14px;color:var(--tx);text-align:left}
+.menu button:hover,.menu button.active{background:var(--cp);color:#fff;border-color:var(--cp)}
+.content{flex:1;padding:20px;overflow-y:auto}
+.view{display:none}
+.view.active{display:block}
+.title2{font-size:24px;font-weight:600;margin-bottom:20px}
+.form-group{margin-bottom:15px;display:flex;flex-direction:column}
+.form-group label{font-weight:500;margin-bottom:5px;font-size:14px}
+.form-group input,.form-group select{padding:10px 12px;border:1px solid var(--bd);border-radius:4px;font-family:inherit;font-size:14px}
+.form-group input:focus,.form-group select:focus{outline:none;border-color:var(--cp);box-shadow:0 0 0 3px rgba(30,64,175,0.1)}
+.btn{padding:10px 16px;border:none;border-radius:4px;cursor:pointer;font-size:14px;font-weight:500;display:inline-block}
+.btn-primary{
