--- a/oto/index.html
+++ b/oto/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data:;">
-    <title>OTO - Inventory Management System</title>
+    <title>OtoFlo - Inventory Management System</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📦</text></svg>">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -105,7 +105,7 @@
     <!-- MAIN APP VIEW -->
     <div id="mainView" class="view">
         <div class="navbar">
-            <div class="navbar-title">OTO Inventory Management</div>
+            <div class="navbar-title">OtoFlo Inventory Management</div>
             <div class="user-info">
                 <span id="userDisplay"></span>
                 <button class="logout-btn" onclick="logout()">Logout</button>
@@ -222,8 +222,8 @@
         // NO EXTERNAL DEPENDENCIES - ALL CODE INLINE
         // DATA STORAGE
         const users = [
-            { email: 'scientist@lab.com', password: 'password', name: 'Lab Scientist', role: 'scientist' },
-            { email: 'manager@lab.com', password: 'password', name: 'Operations Manager', role: 'manager' }
+            { email: 'scientist@lab.com', password: 'Labtesting@01', name: 'Lab Scientist', role: 'scientist' },
+            { email: 'manager@lab.com', password: 'Labtesting@01', name: 'Operations Manager', role: 'manager' }
         ];
 
         let currentUser = null;
