--- a/oto/index.html
+++ b/oto/index.html
@@ -80,7 +80,7 @@
     <div id="loginView" class="view active">
         <div class="login-container">
             <div class="login-card">
-                <div class="login-title">OTO</div>
+                <div class="login-title">OtoFlo</div>
                 <div class="login-subtitle">Inventory Management System</div>
                 <form id="loginForm">
                     <div class="form-group">
