--- a/oto/index.html
+++ b/oto/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src 'self' data:;">
-    <title>OtoFlo - Inventory Management System</title>
+    <title>OTO - Inventory Management System</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📦</text></svg>">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -80,7 +80,7 @@
     <div id="loginView" class="view active">
         <div class="login-container">
             <div class="login-card">
-                <div class="login-title">OtoFlo</div>
+                <div class="login-title">OTO</div>
                 <div class="login-subtitle">Inventory Management System</div>
                 <form id="loginForm">
                     <div class="form-group">
@@ -105,7 +105,7 @@
     <!-- MAIN APP VIEW -->
     <div id="mainView" class="view">
         <div class="navbar">
-            <div class="navbar-title">OtoFlo Inventory Management</div>
+            <div class="navbar-title">OTO Inventory Management</div>
             <div class="user-info">
                 <span id="userDisplay"></span>
                 <button class="logout-btn" onclick="logout()">Logout</button>
