--- a/oto/index.html
+++ b/oto/index.html
@@ -95,8 +95,7 @@
                 </form>
                 <div class="demo-info">
                     <p><strong>Demo Credentials:</strong></p>
-                    <p>scientist@lab.com / password</p>
-                    <p>manager@lab.com / password</p>
+                    <p>email / password</p>
                 </div>
             </div>
         </div>
